Boid goal object that has a force field set to 'Every Point' shape causes crash #46249

Closed
opened 2015-09-24 20:41:31 +02:00 by Ray Mairlot · 8 comments

System Information
Windows 7 64-bit, Nvidia GTX 570

Blender Version
Broken: 741cf19 (latest 64-bit build)
Worked: -

Short description of error

When there is an object that is the 'Goal' of a 'boid' particle system and that object has a force field with a shape of 'Every Point' Blender instantly crashes when you attempt to play the animation.

Exact steps for others to reproduce the error

boid bug.blend

  1. Open file,
  2. Alt+A to play timeline.
**System Information** Windows 7 64-bit, Nvidia GTX 570 **Blender Version** Broken: 741cf19 (latest 64-bit build) Worked: - **Short description of error** When there is an object that is the 'Goal' of a 'boid' particle system and that object has a force field with a shape of 'Every Point' Blender instantly crashes when you attempt to play the animation. **Exact steps for others to reproduce the error** [boid bug.blend](https://archive.blender.org/developer/F238635/boid_bug.blend) 1. Open file, 2. Alt+A to play timeline.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RayMairlot

Added subscriber: @RayMairlot
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Can confirm

Can confirm

Added subscriber: @newbs

Added subscriber: @newbs

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by cf12e51eba

This issue was referenced by cf12e51eba8cb45e3c19f9f069725ed2d7624b8d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46249
No description provided.