Fix T46249: Boid goal object that has a force field set to 'Every Point' shape causes crash.

This is a mere bandage, that whole area is known broken anyway, but at least it should prevent the crash.

Note that that kind of stuff (the efd->index being a pointer) is really bad practice imho...

Should be backported to final 2.76.