source/blender/blenkernel/intern/effect.c
@@ -687,10 +687,10 @@ int get_effector_data(EffectorCache *eff, EffectorData *efd, EffectedPoint *poin
 }
 static void get_effector_tot(EffectorCache *eff, EffectorData *efd, EffectedPoint *point, int *tot, int *p, int *step)
 {
-	if (eff->pd->shape == PFIELD_SHAPE_POINTS) {
-		efd->index = p;
+	*p = 0;
+	efd->index = p;
 
-		*p = 0;
+	if (eff->pd->shape == PFIELD_SHAPE_POINTS) {
 		*tot = eff->ob->derivedFinal ? eff->ob->derivedFinal->numVertData : 1;
 
 		if (*tot && eff->pd->forcefield == PFIELD_HARMONIC && point->index >= 0) {
@@ -699,9 +699,6 @@ static void get_effector_tot(EffectorCache *eff, EffectorData *efd, EffectedPoin
 		}
 	}
 	else if (eff->psys) {
-		efd->index = p;
-
-		*p = 0;
 		*tot = eff->psys->totpart;
 		
 		if (eff->pd->forcefield == PFIELD_CHARGE) {
@@ -727,7 +724,6 @@ static void get_effector_tot(EffectorCache *eff, EffectorData *efd, EffectedPoin
 		}
 	}
 	else {
-		*p = 0;
 		*tot = 1;
 	}
 }
